mobile reactivity spacing fix

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -242,8 +242,8 @@
   }
 
   .single-page-hero-area {
-    padding-left: 15;
-    padding-right: 15;
+    padding-left: 20;
+    padding-right: 20;
   }
 
   .single-page-hero-area h2 {
@@ -256,7 +256,7 @@
   }
 
   .main-footer {
-    padding: 50px 15px;
+    padding: 50px 20px;
   }
 
   .about-content-part {
@@ -362,7 +362,7 @@
   }
 
   .resume-area {
-    padding: 50 15;
+    padding: 50 20;
   }
 
   .resume-wrapper {
@@ -374,15 +374,15 @@
   }
 
   .services-area {
-    padding: 50px 15px;
+    padding: 50 20;
   }
 
   .testimonials-area {
-    padding: 50 15;
+    padding: 50 20;
   }
 
   .projects-area {
-    padding: 50 15;
+    padding: 50 20;
   }
 
   .client-logo-area {
@@ -395,7 +395,7 @@
   }
 
   .contact-area {
-    padding: 50 15;
+    padding: 50 20;
   }
 
   .contact-form-area,
@@ -496,7 +496,7 @@
   }
 
   .single-project-page-design {
-    padding: 0 15px;
+    padding: 0 20px;
   }
 
   .single-project-page-right {
